--- a/package.json
+++ b/package.json
@@ -80,17 +80,21 @@
     "eslint-plugin-import": "^2.20.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^2.0.0",
+    "react-search-panel": "^1.0.9",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "prop-types": "^15.6.1"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
     "electron-find-in-page": "^1.0.8",
     "electron-in-page-search": "^1.3.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-select-search": "^3.0.9"
   },
   "browserslist": [
     ">0.2%",
